cute-name-service/src/main/fabric8/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/part-of: cache-example
    app.kubernetes.io/name: cute-name-service
    app.kubernetes.io/component: backend
    app.kubernetes.io/runtime: spring-boot
    app.kubernetes.io/runtime-version: ${spring-boot.version}
  annotations:
    app.kubernetes.io/vcs-uri: git@github.com:snowdrop/cache-example.git
    app.kubernetes.io/connects-to: greeting-cache
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ${project.artifactId}
